fix dark mode bugs

--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -1,29 +1,24 @@
-/* .ColorMode {
-  border: 1px solid red;
-  height: 70px;
-  align-items: center;
-  background-color: transparent;
-} */
+body {
+  margin: 0;
+  padding: 0;
+}
 .outer_box {
   border: 0px solid red;
   top: 0;
   position: fixed;
-  width: 100%;
+  width: 104%;
   z-index: 100;
-  display: flex;
-  justify-content: space-around;
+  margin-left: -2%;
 }
 .outer_box_active {
   border: 0px solid rgb(0, 213, 255);
-  background-color: white;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   top: 0;
   position: fixed;
-  width: 100%;
+  width: 104%;
   z-index: 100;
-  display: flex;
-  justify-content: space-around;
+  margin-left: -2%;
 }
 
 .main_box {
@@ -39,6 +34,7 @@
   width: 40%;
   align-items: center;
   font-size: 18px;
+  font-weight: 500;
   justify-content: space-evenly;
   margin-right: 2px;
 }
@@ -49,22 +45,26 @@
 }
 
 @media (max-width: 720px) {
+  body {
+    margin: 0;
+    padding: 0;
+  }
   .outer_box {
     border: 0px solid red;
-    background-color: white;
     top: 0;
     position: fixed;
-    width: 100%;
+    width: 104%;
     z-index: 100;
+    margin-left: -4%;
   }
   .outer_box_active {
     border: 0px solid rgb(0, 213, 255);
-    background-color: white;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
       rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     top: 0;
     position: fixed;
-    width: 100%;
+    width: 104%;
     z-index: 100;
+    margin-left: -4%;
   }
 }
